# slack-dm-patcher

./: .gitignore  setup.cfg
slack_dm_patcher/: __init__.py
