[metadata]
name = slack-dm-patcher
description = Patch Slack app for Dark Mode 
version = 1.0.0

[options]
zip_safe = true
packages = find:
setup_requires =
    wheel
install_requires =

[options.entry_points]
console_scripts =
    slack-dm-patcher = slack_dm_patcher:main

[options.extras_require]
dev = 
    yapf
    rope
test = 
    pytest
    flake8
    mypy

[bdist_wheel]
universal = true

[yapf]
based_on_style = pep8
column_limit = 100

[flake8]
max-line-length = 120
